trying to fix horizontal scroll on mobile

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -87,6 +87,7 @@ footer {
                     right: -50%;
                     top: -45%;
                     z-index: -10;
+                    overflow-x: hidden;
                 }
                 form {
                     display: flex;
