--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -158,6 +158,8 @@ header {
             top: 10%;
             z-index: -5;
             -webkit-text-stroke: 0.4px $white;
+            overflow-x: hidden;
+
         }
     }
 }
