--- a/styles/style.css
+++ b/styles/style.css
@@ -235,6 +235,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  width: 100%;
+}
+
 body, h1, h2, h3, ul, p {
   margin: 0;
   padding: 0;
@@ -488,6 +492,7 @@ header .wrapper .headerBackText {
   top: 10%;
   z-index: -5;
   -webkit-text-stroke: 0.4px rgb(250, 250, 250);
+  overflow-x: hidden;
 }
 
 .projects {
@@ -523,6 +528,7 @@ header .wrapper .headerBackText {
   right: -88%;
   z-index: -5;
   -webkit-text-stroke: 0.4px rgb(250, 250, 250);
+  overflow-x: hidden;
 }
 .projects .projectContainer {
   display: flex;
@@ -648,6 +654,7 @@ header .wrapper .headerBackText {
   z-index: -5;
   opacity: 0.15;
   -webkit-text-stroke: 0.4px rgb(250, 250, 250);
+  overflow-x: hidden;
 }
 .about .ourStoryCover .purpleStrip {
   height: 45vh;
@@ -793,6 +800,7 @@ footer .wrapper .footerMainContainer .formContainer .footerBackText {
   right: -50%;
   top: -45%;
   z-index: -10;
+  overflow-x: hidden;
 }
 footer .wrapper .footerMainContainer .formContainer form {
   display: flex;
